--- a/inference/vllm_gpu.ipynb
+++ b/inference/vllm_gpu.ipynb
@@ -151,6 +151,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7ec9a0b4-9df4-4308-a209-7732a7cb3a45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curl http://localhost:8000/v1/completions \\\n",
+    "    -H \"Content-Type: application/json\" \\\n",
+    "    -d '{\n",
+    "            \"model\": \"./Qwen2___5-3B-Instruct\",\n",
+    "            \"prompt\": \"彩虹是\",        \n",
+    "            \"max_tokens\": 7,        \n",
+    "            \"temperature\": 0    \n",
+    "         }'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ad746858-cde1-40fd-9fe9-17292405bdb9",
    "metadata": {},
    "outputs": [],
@@ -360,6 +377,52 @@
    "outputs": [],
    "source": [
     "python -m vllm.entrypoints.api_server --model ./Qwen2___5-3B-Instruct --tensor-parallel-size 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19e94401-0df3-4036-8394-96ffe94cd0fa",
+   "metadata": {},
+   "source": [
+    "## 速度测试"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "703235bf-e988-49cd-8012-56e2e7a40bc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python benchmark_throughput.py \\\n",
+    "        --model ./Qwen2___5-3B-Instruct \\\n",
+    "        --backend vllm \\\n",
+    "        --input-len 64 \\\n",
+    "        --output-len 128 \\\n",
+    "        --num-prompts 25 \\\n",
+    "        --seed 2024 \\\n",
+    "        --dtype float16 \\\n",
+    "        --max-model-len 512 \\\n",
+    "        --trust-remote-code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29f3836a-c6c8-45a5-b445-769ee2c4d4da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python benchmark_throughput.py \\\n",
+    "        --model ./Qwen2___5-3B-Instruct \\\n",
+    "        --backend hf \\\n",
+    "        --input-len 64 \\\n",
+    "        --output-len 128 \\\n",
+    "        --num-prompts 25 \\\n",
+    "        --seed 2024 \\\n",
+    "        --dtype float16 \\\n",
+    "        --hf-max-batch-size 25 \\\n",
+    "        --trust-remote-code"
    ]
   }
  ],
