update llm router

--- a/llm_router/llm_router.ipynb
+++ b/llm_router/llm_router.ipynb
@@ -831,8 +831,83 @@
    "id": "43a481f0-004f-42a6-9f92-eca087f2f045",
    "metadata": {},
    "source": [
-    "生成的图表显示了 CPT(50%) 和 CPT(80%) 评估的性能/成本权衡。 CPT(80%) 图表表明，需要对强模型进行近 49% 的调用才能达到实现强弱模型之间性能差距恢复 80% 的目标准确度。 CPT(50%) 图表显示，需要约 21.4% 的强模型调用才能达到 50% 性能差距恢复目标。这些结果显示了使用强模型和实现所需性能水平之间的权衡，表明无需将所有查询路由到强模型即可实现显着的性能提升。\n",
+    "生成的图表显示了 CPT(50%) 和 CPT(80%) 评估的性能/成本权衡。 CPT(80%) 图表表明，需要对强模型进行近 49% 的调用才能达到实现强弱模型之间性能差距恢复 80% 的目标准确度。 CPT(50%) 图表显示，需要约 21.4% 的强模型调用才能达到 50% 性能差距恢复目标。这些结果显示了使用强模型和实现所需性能水平之间的权衡，表明无需将所有查询路由到强模型即可实现显着的性能提升。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8db7e55b-5e81-4edd-846d-f087b4abd808",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of being class 1: 0.0254\n",
+      "Predicted Label: \u001b[32m weak llm \u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "from torch import nn\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from datasets import load_dataset\n",
+    "import wandb\n",
+    "from torch.nn.functional import sigmoid\n",
     "\n",
+    "# Define the trained model class and load the model\n",
+    "class Classifier(nn.Module):\n",
+    "    def __init__(self, transformer_model_name):\n",
+    "        super(Classifier, self).__init__()\n",
+    "        self.transformer = SentenceTransformer(transformer_model_name)\n",
+    "        self.fc1 = nn.Linear(self.transformer.get_sentence_embedding_dimension(), 512)\n",
+    "        self.fc2 = nn.Linear(512, 256)\n",
+    "        self.fc3 = nn.Linear(256, 1)\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "\n",
+    "    def forward(self, sentences):\n",
+    "        embeddings = self.transformer.encode(sentences, convert_to_tensor=True)\n",
+    "        x = self.relu(self.fc1(embeddings))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        return self.fc3(x)\n",
+    "\n",
+    "model = Classifier('./all-distilroberta-v1')\n",
+    "model.load_state_dict(torch.load('runs/best_model.pt'))\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device).eval()\n",
+    "conf_scoe = 0.23591\n",
+    "\n",
+    "id2label = {1: \"strong llm\", 0: \"weak llm\"}\n",
+    "\n",
+    "# 推理函数\n",
+    "def predict(sentence):\n",
+    "    with torch.no_grad():  # 关闭梯度计算\n",
+    "        input_tensor = [sentence]  # 输入句子\n",
+    "        output = model(input_tensor)  # 模型前向传播\n",
+    "        probability = sigmoid(output).item()  # 将输出转换为概率\n",
+    "        label = 1 if probability > conf_scoe else 0  # 根据阈值确定标签\n",
+    "        return probability, label\n",
+    "\n",
+    "# 测试句子\n",
+    "test_sentence = \"\"\"\n",
+    "How do I prevent heat stroke?\n",
+    "\"\"\"\n",
+    "\n",
+    "probability, label = predict(test_sentence)\n",
+    "\n",
+    "print(f\"Probability of being class 1: {probability:.4f}\")\n",
+    "print(f\"Predicted Label: \\033[32m {id2label[label]} \\033[0m\") # 0 is weak llm，1 is strong llm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b590ec35-a7d7-4f5a-9843-2fe83a41c46b",
+   "metadata": {},
+   "source": [
     "## 使用 Weave 评估响应质量\n",
     "\n",
     "为了更深入地了解我们的模型在使用路由器时如何响应，我们对数据集进行了 Weave 评估。 Weave 是一个用于简化评估的强大工具，提供了一种快速直观的方式来可视化模型如何响应各种查询。\n",
